--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@ant-design/icons": "^5.6.1",
     "antd": "^5.24.3",
     "axios": "^1.8.2",
+    "chart.js": "^4.4.8",
     "framer-motion": "^12.4.10",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.3.0"
